--- a/src/todo
+++ b/src/todo
@@ -9,7 +9,7 @@ Backend:
         ☐ Implement user model @started(19-01-19 00:05)
         ☐ Implement user endpoint @started(19-01-19 00:06)
         ☐ Write user data schema @started(19-01-19 00:06)
-        ✔ Work on Endpoint View @started(19-01-19 00:15) @done(19-01-19 11:42) @lasted(11h27m23s)
+        ✔ Work on Endpoint View @started(19-01-19 00:15) @done(19-01-22 18:24) @lasted(3d18h9m8s)
     Blocked:
     Done:
     
